--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 <a href="week13.html"><b>13</b></a>
 <a href="week14.html"><b>14</b></a>
 <a href="week15.html"><b>15</b></a>
-<a href="week16.html"><b>16P</b></a><br>
+<a href="week16.html"><b>16</b></a>
+<a href="week17.html"><b>17P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -76,7 +77,7 @@
 <tr><td><font size=2>Sam(7)</font></td>
     <td><font size=2>11</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>12890</font></td>
+    <td><font size=2>13535</font></td>
     <td><font size=2>9130</font></td>
     <td><font size=2>1555</font></td>
     <td><font size=2>580</font></td>
@@ -84,7 +85,7 @@
 <tr><td><font size=2>States(3)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>10535</font></td>
+    <td><font size=2>11115</font></td>
     <td><font size=2>9850</font></td>
     <td><font size=2>1010</font></td>
     <td><font size=2>210</font></td>
@@ -92,7 +93,7 @@
 <tr><td><font size=2>Roger(5)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>9935</font></td>
+    <td><font size=2>10710</font></td>
     <td><font size=2>10330</font></td>
     <td><font size=2>885</font></td>
     <td><font size=2>335</font></td>
@@ -100,7 +101,7 @@
 <tr><td><font size=2>Rich(1)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>9495</font></td>
+    <td><font size=2>10440</font></td>
     <td><font size=2>9540</font></td>
     <td><font size=2>1030</font></td>
     <td><font size=2>250</font></td>
@@ -108,7 +109,7 @@
 <tr><td><font size=2>Grant(9)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>9425</font></td>
+    <td><font size=2>10385</font></td>
     <td><font size=2>9360</font></td>
     <td><font size=2>1005</font></td>
     <td><font size=2>240</font></td>
@@ -124,15 +125,15 @@
 <tr><td><font size=2>Steven(2)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>10470</font></td>
+    <td><font size=2>11515</font></td>
     <td><font size=2>9330</font></td>
     <td><font size=2>1125</font></td>
     <td><font size=2>255</font></td>
-    <td><font size=2>4</font></td></tr>
+    <td><font size=2>5</font></td></tr>
 <tr><td><font size=2>Randy(8)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>9895</font></td>
+    <td><font size=2>10575</font></td>
     <td><font size=2>10310</font></td>
     <td><font size=2>1020</font></td>
     <td><font size=2>85</font></td>
@@ -140,7 +141,7 @@
 <tr><td><font size=2>Mike(4)</font></td>
     <td><font size=2>6</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>8530</font></td>
+    <td><font size=2>8940</font></td>
     <td><font size=2>9365</font></td>
     <td><font size=2>870</font></td>
     <td><font size=2>280</font></td>
@@ -148,7 +149,7 @@
 <tr><td><font size=2>John(6)</font></td>
     <td><font size=2>5</font></td>
     <td><font size=2>10</font></td>
-    <td><font size=2>8730</font></td>
+    <td><font size=2>9355</font></td>
     <td><font size=2>10550</font></td>
     <td><font size=2>830</font></td>
     <td><font size=2>370</font></td>
@@ -156,7 +157,7 @@
 <tr><td><font size=2>Matthew(10)</font></td>
     <td><font size=2>4</font></td>
     <td><font size=2>11</font></td>
-    <td><font size=2>8145</font></td>
+    <td><font size=2>8435</font></td>
     <td><font size=2>10285</font></td>
     <td><font size=2>940</font></td>
     <td><font size=2>195</font></td>
