--- a/thousand.html
+++ b/thousand.html
@@ -705,6 +705,12 @@
     <td>1045</td>
     <td>Rich</td>
     <td>740</td></tr>
+<tr><td>2020</td>
+    <td>Week 16</td>
+    <td>Steven Cohen</td>
+    <td>1045</td>
+    <td>States</td>
+    <td>580</td></tr>
 <tr><td>2002</td>
     <td>Week 4</td>
     <td>John Heinzelmann</td>
