--- a/week17.html
+++ b/week17.html
@@ -22,7 +22,7 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
 <tr><td>Rodgers (D)</td>   <td></td><td align=right>0</td></tr>
-<tr><td>Mattison/td>       <td></td><td align=right>0</td></tr>
+<tr><td>Mattison</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Drake (D)</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Robinson</td>      <td></td><td align=right>0</td></tr>
 <tr><td>MThomas (D)</td>   <td></td><td align=right>0</td></tr>
